--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=uan-es-atdd-python:BRANCH:develop
+sonar.projectKey=uan-es-atdd-python
 sonar.organization=uan-calidad-software-2021
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
