--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=uan-calidad-software-2021_uan-es-atdd-python
 sonar.organization=uan-calidad-software-2021
 sonar.host.url=https://sonarcloud.io
-sonar.sources=.
+sonar.sources=app
+sonar.test=test
