--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=uan-calidad-software-2021_uan-es-atdd-python
 sonar.organization=uan-calidad-software-2021
 sonar.host.url=https://sonarcloud.io
 sonar.sources=app
-sonar.test=test
+sonar.tests=test
