--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.organization=uan-calidad-software-2021
 sonar.host.url=https://sonarcloud.io
 sonar.sources=app
 sonar.tests=test
-sonar.python.coverage.reportPaths=coverage-reports/*coverage-*.xml
+sonar.coverage.python.xmlReportPaths=coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
