--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=uan-calidad-software-2021_uan-es-atdd-python
 sonar.organization=uan-calidad-software-2021
 sonar.host.url=https://sonarcloud.io
+# Language
+sonar.language=py
 sonar.sources=app
 sonar.tests=test
-sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml,target/site/jacoco-it/jacoco.xml,build/reports/jacoco/test/jacocoTestReport.xml
