--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,8 @@ sonar.host.url=https://sonarcloud.io
 sonar.language=py
 sonar.sources=app
 sonar.tests=test
+# Unit tests
+sonar.python.xunit.reportPath=test-reports/*.xml
+sonar.python.coverage.reportPaths=coverage-reports/*.xml
+# Integration tests
+sonar.python.coverage.itReportPaths=it-coverage.xml
