--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,10 +3,11 @@ sonar.organization=uan-calidad-software-2021
 sonar.host.url=https://sonarcloud.io
 # Language
 sonar.language=py
-sonar.sources=app
-sonar.tests=test
+sonar.sources=./app
+sonar.tests=./test
 # Unit tests
 sonar.python.xunit.reportPath=test-reports/*.xml
 sonar.python.coverage.reportPaths=coverage-reports/*.xml
+sonar.python.coverage.reportPath=coverage-reports/coverage.xml
 # Integration tests
 sonar.python.coverage.itReportPaths=it-coverage.xml
