--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,6 @@ sonar.language=py
 sonar.sources=./app
 sonar.tests=./test
 # Unit tests
-sonar.python.xunit.reportPath=test-reports/*.xml
-sonar.python.coverage.reportPaths=coverage-reports/*.xml
-sonar.python.coverage.reportPath=coverage-reports/coverage.xml
+sonar.python.coverage.reportPaths=./coverage-reports/*.xml
 # Integration tests
-sonar.python.coverage.itReportPaths=it-coverage.xml
+sonar.python.coverage.itReportPaths=./it-coverage.xml
